tests/baselines/reference/jsDeclarationsClassLikeHeuristic(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index.js(4,3): error TS2339: Property 'prototype' does not exist on type '{}'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.js (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/35801
    let A;
    A = {};
    A.prototype.b = {};
      ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type '{}'.